hphp/hack/test/typecheck/reactive/owned_mutable6.php
<?hh

function f() {
  // ERROR
  $x = (<<__OwnedMutable>> A $c) ==> {};
}
